第一次提交

--- a/project.config.json
+++ b/project.config.json
@@ -9,8 +9,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
-	"appid": "wx7832e14a6f7c58ae",
-	"projectname": "MyWxShop",
+	"appid": "wx36e937b58c31a992",
+	"projectname": "malltest",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
